# pymidi

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE.txt  Pipfile  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: release.yml  test.yml
examples/: example_client.py  example_server.py
pymidi/: client.py  packets.py  protocol.py  server.py  utils.py
pymidi/tests/: packets_test.py  protocol_test.py  server_tests.py  utils_test.py
