[tool.black]
line-length = 100
skip-string-normalization = true
target_version = ['py38']
include = '.*\.pyi?$'

[tool.poetry]
name = "pymidi"
version = "0.6.0-pre1"
description = "Python library for building RTP-MIDI clients and servers"
authors = ["mike wakerly <opensource@hoho.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
six = "^1.16.0"
construct = "^2.10.68"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
coloredlogs = "^15.0.1"
twine = "^3.8.0"
mock = "^4.0.3"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
